github pages 3rd try

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://marcelmroz.github.io/e-commerce-frontend",
+  "homepage": "https://marcelmroz.github.io/e-commerce-frontend/public",
   "name": "e-commerce-frontend",
   "version": "0.1.0",
   "private": true,
